# SkripClean

./: .gitignore  CMakeLists.txt  README.md  SkripClean.spec  ai_consultant.py  autorun_manager.py  disclaimer_dialog.py  folder_search.cpp  folder_search.hpp  folder_search_binding.cpp  main.py  main_pyqt.py  path_cache.py  program_uninstaller.py  recovery.cpp  recovery_wrapper.py  requirements.txt  stdafx.h  system_cleaner.py  system_monitor.py  version.txt
